added new index.html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             </div>
             <footer data-role="footer" data-position="fixed">
-                <h4>duzo roboty</h4>
+                <h4>>&copy; Copyright Ewa Kołodziejczyk 2017</h4>
             </footer>
         </div>
 
