--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
 
-        <title>AplikacjaMobilna</title>
+        <title>Challenge App</title>
     </head>
     <body>
         <script type="text/javascript" src="cordova.js"></script>
