--- a/sign-in.html
+++ b/sign-in.html
@@ -10,87 +10,23 @@
 </head>
 
 <body>
-    !DOCTYPE html>
-2
-<html>
-3
-<head>
-4
-    <title>Conference Room Booking App - Sign In</title>
-5
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-6
-    <link href="css/themes/1/conf-room1.min.css" rel="stylesheet" />
-7
-    <link href="css/themes/1/jquery.mobile.icons.min.css" rel="stylesheet" />
-8
-    <link href="../../lib/jqm/1.4.4/jquery.mobile.structure-1.4.4.min.css" rel="stylesheet" />
-9
-    <link href="css/app.css" rel="stylesheet" />
-10
-    <script src="../../lib/jquery/2.1.1/jquery-2.1.1.min.js"></script>
-11
-    <script src="../../lib/jqm/1.4.4/jquery.mobile-1.4.4.min.js"></script>
-12
-</head>
-13
- 
-14
-<body>
-15
     <div data-role="page">
-16
-        <div data-role="header">
-17
-            <h1>Challange App</h1>
-18
+        <div data-role="header" data-theme="c">
+            <h1>Challenge App</h1>
         </div><!-- /header -->
-19
         <div role="main" class="ui-content">
-20
-            <h3>Sign In</h3>
-21
-            <label for="txt-email">Email Address</label>
-22
-            <input type="text" name="txt-email" id="txt-email" value="">
-23
+            <h3>Sign in</h3>
+            <label for="txt-email">E-mail Adress</label>
+            <input type="text" name="txt-email" id="txt-email" value=""><br><br>
             <label for="txt-password">Password</label>
-24
             <input type="password" name="txt-password" id="txt-password" value="">
-25
-            <fieldset data-role="controlgroup">
-26
-                <input type="checkbox" name="chck-rememberme" id="chck-rememberme" checked="">
-27
-                <label for="chck-rememberme">Remember me</label>
-28
-            </fieldset>
-29
-            <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
-30
-            <p class="mc-top-margin-1-5"><a href="begin-password-reset.html">Can't access your account?</a></p>
-31
-            <div data-role="popup" id="dlg-invalid-credentials" data-dismissible="false" style="max-width:400px;">
-32
-                <div role="main" class="ui-content">
-33
-                    <h3 class="mc-text-danger">Login Failed</h3>
-34
-                    <p>Did you enter the right credentials?</p>
-35
-                    <div class="mc-text-center"><a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
-36
+
+             <a href="#pageMain" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Sign in</a>
+          
                 </div>
-37
             </div>
-38
-        </div><!-- /content -->
-39
-    </div><!-- /page -->
-40
+        </div>
+    </div>
 </body>
-41
 </html>
 
-</body>
-</html>
