poprawa mapki, rozbudowa wysyłania maili, readme, poprawki w kodzie

--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
                 <h1 id="app-title">Challenge App</h1>
             </div>
             <div id="divMain" data-role="main" class="mc-text-center">
-                <p class="mc-text-center">Tekst dlugi o programie, reguly etc.</p>
+                <h1 class="mc-text-center"> Challenge App</h1>
+<br>
+Cel aplikacji: 
+<br>   
+Celem aplikacji jest rywalizacja z innymi Użytkownikami w wyzwaniach terenowych, polegających na przemieszczanie się pomiędzy określonymi punktami na mapie.
+<br><br>
+Opis aplikacji:
+<br>
+Challenge App to aplikacja, która pozwala rzucać wyzwania Twojemu rodzeństwu, przyjaciołom, lub kolegom z pracy. Aby w pełni korzystać z możliwości aplikacji trzeba założyć w niej konto podając swój adres e-mail. Wtedy z łatwością możesz umieścić koordynaty, które będzie musiał w odpowiedniej kolejności odwiedzić Twój przeciwnik. Oszustwa nie są możliwe, gdyż aplikacja zaliczy odwiedzane miejsce tylko wtedy, gdy geolokalizacja na urządzeniu Użytkownika wskaże osiągnięty punkt na mapie. Twój oponent zaliczy wyzwanie tylko w sytuacji, kiedy odwiedzi wszystkie naniesione na mapę punkty. Po wszystkim poinformuje Cię komunikatem, że zakończył zadanie a Ty będziesz musiał postawić mu piwo, kawę, lub pyszne ciastko!
+<br><br>
+ Dane autorów:<br>
+- Ewa Kołodziejczyk [*TEAM MANAGER*], ekolodziejczyk@gmail.com<br>
+- Łukasz Kępa, lkepa@gmail.com<br>
+- Kornel Kawulok, kkawulok@gmail.com<br>
                 <a href="#pageMain" class="ui-btn ui-btn-inline ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">Ok</a>
             </div>
             <footer data-role="footer" data-position="fixed">
