Formatowanie wysyłanego maila

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ Challenge App to aplikacja, która pozwala rzucać wyzwania Twojemu rodzeństwu,
                     <textarea id="dlgListaSendBody" name="dlgListaSendBody" required rows="6"></textarea>
 					Frend's mail:
 					<textarea id="mailkolegi" name="mailkolegi" required rows="1"></textarea>
-					<input type="button" class="ui-btn ui-btn-inline ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5" onclick="location.href=&quot;mailto:&quot;+document.getElementById(&quot;mailkolegi&quot;).value+&quot;?subject=Nowe wyzwanie&body=&quot;+document.getElementById(&quot;dlgListaSendBody&quot;).value+&quot;                   Skopiuj powyższy tekst i wklej na stronie: http://v-ie.uek.krakow.pl/~s182919/#dlgLista&quot; " value="Send">
+					<input type="button" class="ui-btn ui-btn-inline ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5" onclick="location.href=&quot;mailto:&quot;+document.getElementById(&quot;mailkolegi&quot;).value+&quot;?subject=Nowe wyzwanie: &quot;+document.getElementById(&quot;nazwaChallenge&quot;).value+&quot;&body=&quot;+document.getElementById(&quot;listaPktCreate&quot;).innerText+'%0D%0A'+'%0D%0A'+&quot;Skopiuj powyższy tekst i wklej na stronie: https://ewakolodziejczyk.github.io/MobileApp/ &quot; " value="Send">
                     <a href="#pageMain" class="ui-btn ui-btn-inline ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5"><center>Home</center></a>
 					
 				</form>
