<br> w liście pkt.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Challenge App to aplikacja, która pozwala rzucać wyzwania Twojemu rodzeństwu,
                 sInnHtml += addPointDescr.value;
                 sInnHtml += " ("
                 sInnHtml += addPointGPS.innerText; // innerText retrieves and sets the content of the tag as plain text
-                sInnHtml += ")</li>"
+                sInnHtml += ")</li><br>"
                 listaPktCreate.innerHTML = sInnHtml;
                 }
         </script>
