--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
             <div id="divMain" data-role="main" class="mc-text-center">
                 <h1 class="mc-text-center"> Challenge App</h1>
 <br>
-Cel aplikacji: 
+App aim: 
 <br>   
-Celem aplikacji jest rywalizacja z innymi Użytkownikami w wyzwaniach terenowych, polegających na przemieszczanie się pomiędzy określonymi punktami na mapie.
+The aim of the application is to compete with other users in the field challenges, involving the movement between the specified points on the map.
 <br><br>
-Opis aplikacji:
+App description:
 <br>
-Challenge App to aplikacja, która pozwala rzucać wyzwania Twojemu rodzeństwu, przyjaciołom, lub kolegom z pracy. Aby w pełni korzystać z możliwości aplikacji trzeba założyć w niej konto podając swój adres e-mail. Wtedy z łatwością możesz umieścić koordynaty, które będzie musiał w odpowiedniej kolejności odwiedzić Twój przeciwnik. Oszustwa nie są możliwe, gdyż aplikacja zaliczy odwiedzane miejsce tylko wtedy, gdy geolokalizacja na urządzeniu Użytkownika wskaże osiągnięty punkt na mapie. Twój oponent zaliczy wyzwanie tylko w sytuacji, kiedy odwiedzi wszystkie naniesione na mapę punkty. Po wszystkim poinformuje Cię komunikatem, że zakończył zadanie a Ty będziesz musiał postawić mu piwo, kawę, lub pyszne ciastko!
+Challenge App is an application that challenges your siblings, friends or colleagues. The application is like outdoor game, close to ‘Podchody’ game, which is associated with childhood of everyone. The user adds the choice coordinates, which his opponent have to visit later in the correct order. If user want to encourage his opponent to challenge, he can add information about a reward, or appropriately mobilize him. To better reflect the climate of field games, the application does not tell the user the current location, but using geolocation tells him  about the distance to the next point on the map. Scams are not possible because the competitor will win challenge only if he visits all the map points in the correct order. After all, the competitor should inform the user that he has completed the task. In return he will have to give him beer, coffee or a delicious cake!
 <br><br>
- Dane autorów:<br>
+Authors' personal data:<br>
 - Ewa Kołodziejczyk [*TEAM MANAGER*], ekolodziejczyk@gmail.com<br>
 - Łukasz Kępa, lkepa@gmail.com<br>
 - Kornel Kawulok, kkawulok@gmail.com<br>
