--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ App description:
 Challenge App is an application that challenges your siblings, friends or colleagues. The application is like outdoor game, close to ‘Podchody’ game, which is associated with childhood of everyone. The user adds the choice coordinates, which his opponent have to visit later in the correct order. If user want to encourage his opponent to challenge, he can add information about a reward, or appropriately mobilize him. To better reflect the climate of field games, the application does not tell the user the current location, but using geolocation tells him  about the distance to the next point on the map. Scams are not possible because the competitor will win challenge only if he visits all the map points in the correct order. After all, the competitor should inform the user that he has completed the task. In return he will have to give him beer, coffee or a delicious cake!
 <br><br>
 Authors' personal data:<br>
-- Ewa Kołodziejczyk [*TEAM MANAGER*], ekolodziejczyk@gmail.com<br>
+- Ewa Kołodziejczyk (TEAM MANAGER), ekolodziejczyk@gmail.com<br>
 - Łukasz Kępa, lkepa@gmail.com<br>
 - Kornel Kawulok, kkawulok@gmail.com<br>
                 <a href="#pageMain" class="ui-btn ui-btn-inline ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">Ok</a>
